# ChromaGame

./: .editorconfig  .gitignore  README.md  package.json  pnpm-lock.yaml  rebuild_wasm.bat  start_web.bat  wasm_build.bat  wasm_rebuild.bat
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/: Level.h  LevelIO.h  LevelValidate.h  PathUtils.h  RayTrace.h
engine/core/src/: LevelIO.cpp  LevelValidate.cpp  PathUtils.cpp  RayTrace.cpp  core_dummy.cpp
engine/runtime/: CMakeLists.txt
engine/runtime/src/: main.cpp
engine/wasm/: CMakeLists.txt  WasmBindings.cpp
shared/levels/: __web_temp_level.json  level01.json  level03.json  level04.json  level05.json
shared/levels_release/: level01.json  level02.json  level03.json
web/: README.md  next.config.ts  package.json  pnpm-lock.yaml
web/app/: page.tsx
web/app/api/levels/: route.ts
web/app/api/levels/[name]/: route.ts
web/app/api/release-levels/: route.ts
web/app/api/release-levels/[name]/: route.ts
web/app/api/trace/: route.ts
web/app/api/trace/run/: route.ts
web/app/editor/: GridCanvas.tsx  ObjectList.tsx  page.tsx
web/app/play/: page.tsx
web/components/editor/: GridCanvas.tsx  ObjectList.tsx  PropertiesPanel.tsx  Toolbox.tsx
web/lib/: engineWasm.ts  level.ts
web/public/wasm/: engine_wasm.js  engine_wasm.wasm
web/shared/: levelTypes.ts  trace.ts
